charts/kafka/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-external
  namespace: kafka
  labels:
    app: kafka
spec:
  type: LoadBalancer
  ports:
  - port: 9092
    name: plaintext
    targetPort: 9094
  selector:
    app: kafka
