charts/kafka/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: plaintext
    targetPort: 9092
  selector:
    app: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: kafka
  labels:
    app: kafka
spec:
  ports:
  - port: 9092
    name: plaintext
    targetPort: 9092
  - port: 9093
    name: controller
    targetPort: 9093
  clusterIP: None
  selector:
    app: kafka
