charts/kafka/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - kafka-ui.k8s.orb.local
  rules:
  - host: kafka-ui.k8s.orb.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kafka-ui
            port:
              number: 80
