charts/kafka/schema-registry-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: schema-registry-ingressroute
  namespace: kafka
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`schema-registry.k3s.local`)
    kind: Rule
    services:
    - name: schema-registry-external
      port: 80
